Changes for 1.4.1:

 - fixed and improved log monitoring (Eugene)
 - fixed type of items.valuemapid (Alexei)
 - improved Standalone_Template (Alexei)
 - fixed PostgreSQL upgrade patch (Alexei)
 - added loop protection in selection of slave nodes (Alexei)
 - change delimiter for DM data transfers to 0xFF (Alexei)
 - better reporting of DM data transfers in log file (Alexei)
 - added better error reporting in zbx_malloc() (Alexei)
 - fixed transfer of NULL values between nodes (Alexei)
 - minor Oracle related fixes for frontend (Alexe)
 - fixed reconnection for jabber notifications (Eugene)
 - fixed incorrect reporting of SMTP error messages (Alexei)
 - filesize[] replaced by vfs.file.size[] in data.sql (Alexei)
 - support of processing of negative data (Alexei)
 - support of negative numbers in trigger expressions (Alexei)
 - more formal logic of execution of trigger expressions (Alexei)
 - server-side support of quotes in item parameters (num_param, get_param) (Alexei)
 - improved configuration files reading (Eugene)
 - fixed Dashed lines for graphs (Eugene)
 - fixed host and group remembering on graph monitoring screen (Eugene) 
 - improved trigger expression syntax and validation (Eugene)
 - fixed 'Field [formula] is not double' (Eugene)
 - fixed template aplication synchronization (Eugene)
 - fixed NOTSUPPORTED status for 'net.if.*' of Solaris, thanks to 'juampe' (Eugene)
 - minor fixes for sqlite mutexes (Alexei)
 - added check of memory leaks in zbx_malloc() (Alexei)
 - added "PerfCounter" configuration parameter (Eugene)
 - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
 - fixed printing of debug info in delete_history() (Alexei)
 - fixed incorrect type of icmpInAddrMaskReps in SNMPv1 template (Alexei)
 - fixed processing of complex action conditions (Alexei)
 - fixed crash in processing of active checks on agent side (Alexei)
 - minor fix of misc/conf/zabbix_server.conf (Alexei)